--- a/src/components/ArticleFeed/sub/ArticleFeedHeader.module.scss
+++ b/src/components/ArticleFeed/sub/ArticleFeedHeader.module.scss
@@ -2,7 +2,7 @@
 
 .header {
     width: 100%;
-    height: 13%;
+    height: toRem(40);
     display: flex;
     flex-direction: row;
     align-items: center;
