--- a/src/components/ArticleFeed/sub/ArticleFeedImage.module.scss
+++ b/src/components/ArticleFeed/sub/ArticleFeedImage.module.scss
@@ -1,5 +1,16 @@
 @import '../../../utils/toremfunc.scss';
 
 .thumbnail {
-    
+    width: 100%;
+    aspect-ratio: 1.7;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    .default {
+        width: 100%;
+        height: 100%;
+        background: inherit;
+        background-size: contain;
+    }
 }
