--- a/src/utils/style_initialize.css
+++ b/src/utils/style_initialize.css
@@ -3,10 +3,11 @@ figure {
     margin: 0;
 }
 
-h4 {
+h4, h3 {
     display: block;
     margin-block-start: 0;
     margin-block-end: 0;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    font-size: initial;
 }
