:art: Complete template for article_feed

--- a/src/components/ArticleFeed/sub/ArticleFeedContent.module.scss
+++ b/src/components/ArticleFeed/sub/ArticleFeedContent.module.scss
@@ -7,9 +7,13 @@
         margin: toRem(10) 0;
         text-align: center;
     }
-    span {
-        display: inline-block;
-        margin: 0 toRem(10); 
-        text-align:end;
+
+    .likewatch_container {
+        display: flex;
+        flex-direction: row-reverse;
+        span {
+            display: inline-block;
+            margin: 0 toRem(10); 
+        }
     }
-}
+    }
