--- a/src/icons/icons.module.scss
+++ b/src/icons/icons.module.scss
@@ -17,3 +17,15 @@
         opacity: 0.7;
     }
 }
+
+.arrow {
+    fill: white;
+    stroke: skyblue;
+    &:hover {
+        fill: skyblue;
+        stroke: white;
+        cursor: pointer;
+        
+    }
+}
+
