--- a/src/components/Partition/Partition.module.scss
+++ b/src/components/Partition/Partition.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-sizing: border-box;
     .article_scroll {
         position: absolute;
         width: toRem(40);
@@ -36,10 +37,13 @@
         flex-direction: row;
         align-items: center;
         flex-wrap: nowrap;
+        transition: transform 0.4s ease-in-out;
+        box-sizing: border-box;
+        width: fit-content;
 }
 
 @for $i from 0 through 10 {
-    #scroll_level_#{$i} {
-        transform: translateX(-100px)
+    .scroll_level_#{$i} {
+        transform: translateX((-$i * 400px))
     }
 }
