--- a/src/components/ArticleFeed/sub/ArticleFeedContent.module.scss
+++ b/src/components/ArticleFeed/sub/ArticleFeedContent.module.scss
@@ -1,4 +1,5 @@
 @import '../../../utils/toremfunc.scss';
+@import '../../../fonts/Font-Face.module.scss';
 
 .feed_content {
     width: 100%;    
@@ -8,6 +9,8 @@
         text-align: center;
         vertical-align:top;
         min-height: toRem(50);
+        font-family: '--main-font', '--main-font-kr';
+        font-weight: 400;
     }
 
     .likewatch_container {
@@ -15,7 +18,16 @@
         flex-direction: row-reverse;
         span {
             display: inline-block;
-            margin: 0 toRem(10); 
+            margin: 0 toRem(10);
+            height: toRem(20);
+            line-height: toRem(20);
+
+            
+
+            svg {
+                height: 100%;
+                vertical-align: middle;
+            }
         }
     }
     }
