--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,11 +9,12 @@
     height: toRem($headerH);
     width: 100%;
     display: flex;
-    font-family: '--nav-main-font';
+    font-family: '--main-font';
     font-weight: 500;
     z-index: 10;
     background-color: white;
     flex-direction: row;
+    box-shadow: 1px 1px 3.5px 3.5px #E3E3E3;
 
     > div {
         position: relative;
