--- a/src/components/Partition/Partition.module.scss
+++ b/src/components/Partition/Partition.module.scss
@@ -33,7 +33,7 @@
 }
 	
 	.partition_title {
-		font-family: '--main-font-kr', '--main-font';
+		font-family: '--partition-main-font', '--main-font-kr', '--main-font';
         font-weight: 600;
         font-size: toRem(40);
         margin-bottom: toRem(20);
