--- a/src/components/Post/PostRelated/PostIntro/PostIntro.module.scss
+++ b/src/components/Post/PostRelated/PostIntro/PostIntro.module.scss
@@ -8,22 +8,33 @@
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    justify-content:end;
+    justify-content:flex-end;
+    position: relative;
+
 
     .post_intro--background {
+        position: absolute;
         width: 100%;
         height: 100%;
         background-color: rgba(0,0,0,0.3);
     }
 
-    .post_intro--title {
-        position: absolute;
+    .post_intro--title, .post_intro--userid {
+        position: relative;
         display: inline-block;
         width: 100%;
         font-family: '--main-font-kr', '--main-font';
-        font-weight: 400;
         text-align: center;
         color: white;
+    }
+
+    .post_intro--title {
+        font-weight: 400;
         text-shadow: 1px 1px 3px 3px rbga(255,255,255,1);
+        font-size: toRem(50);
+    }
+
+    .post_intro--userid {
+        font-weight: 200
     }
 }
