:art: Complete comment bar

--- a/src/components/Post/PostRelated/PostCommentBar/PostCommentBarBelow.module.scss
+++ b/src/components/Post/PostRelated/PostCommentBar/PostCommentBarBelow.module.scss
@@ -1,14 +1,20 @@
 @import '../../../../utils/toremfunc.scss';
 @import '../../../../fonts/Font-Face.module.scss';
 
+
 .bar_down {
+    $ph: 50;
+    $ch: 40;
     display: flex;
     flex-flow: row wrap;
     width: 100%;
     align-items: center;
+    overflow: hidden;
+    transition: height 0.4s ease-in-out;
+    height:toRem(max($ph, $ch));
 
     .bar_down--profile {
-        flex-basis: toRem(50);
+        flex-basis: toRem($ph);
         aspect-ratio: 1;
         position: relative;
         .profile {
@@ -25,21 +31,26 @@
 
     .bar_down--comment {
         flex-grow: 1;
-        $h: 40;
-        height: toRem($h);
+        height: toRem($ch);
         margin: 0 toRem(4);
         textarea {
             width: 100%;
             height: 100%;
             resize: none;
             font-family: '--main-font-kr';
-            font-size: toRem($h * 0.4);
-            border-radius:  toRem($h/2);
-            line-height: toRem($h);
+            font-size: toRem($ch * 0.4);
+            border-radius:  toRem($ch/2);
             border: 2px solid rgb(163, 213, 233);
             transition: border 0.5s ease-in-out;
-            display: inline-block;
+            line-height: toRem($ch);
             box-sizing: content-box;
+            padding-left: toRem(10);
+            &::placeholder {
+                font-family: inherit;
+                font-size: inherit;
+                line-height: inherit;
+                display: inline-block;
+            }
             &:focus-within {
                 outline: none;
                 border: 2px solid rgb(41, 179, 233);
@@ -48,12 +59,7 @@
                 }
             }
             
-            &::placeholder {
-                font-family: inherit;
-                font-size: inherit;
-                line-height: inherit;
-                display: inline-block;
-            }
+            
 
         }
 
@@ -62,6 +68,10 @@
         flex-basis: toRem(45);
         aspect-ratio: 1;
         position: relative;
-        margin-left: toRem(4);
+        margin-left: toRem(20);
     }
+}
+
+.hide {
+    height: 0 !important;
 }
