--- a/src/utils/toremfunc.scss
+++ b/src/utils/toremfunc.scss
@@ -1,6 +1,12 @@
 @function toRem($value) {
     @return $value / 16 + rem
-}
+};
+
+// @function toRemAdd($toRemV, $v2) {
+//     $rem: $toRemV / 16 + rem;
+//     $res: calc($rem + $v2);
+//     @return $res;
+// };
 
 $headerH: 80;
 $page_content_maxwidth: 1200;
