:recycle: Extract profile picture component

--- a/src/components/Post/PostRelated/PostCommentBar/PostCommentBar.module.scss
+++ b/src/components/Post/PostRelated/PostCommentBar/PostCommentBar.module.scss
@@ -2,7 +2,7 @@
 @import '../../../../fonts/Font-Face.module.scss';
 
 .bar {
-    position: fixed;
+    position: sticky;
     bottom: 0;
     width:100%;
     max-width: toRem($page_content_maxwidth);
