--- a/src/components/ArticleFeed/sub/ArticleFeedHeader.module.scss
+++ b/src/components/ArticleFeed/sub/ArticleFeedHeader.module.scss
@@ -16,16 +16,9 @@
         flex-grow: 1;
         font-family: '--main-font-kr', '--main-font'; 
 
-        .profile_image {
-            background-image: url('../../../images/logo192.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            
+        .user_profileContainer {
             height: 100%;
             aspect-ratio: 1;
-            border-radius: 50%;
-            display: inline-block;
         }
 
         .username {
