:sparkles: add comment list

--- a/src/components/Post/PostRelated/PostCommentList/PostCommentList.module.scss
+++ b/src/components/Post/PostRelated/PostCommentList/PostCommentList.module.scss
@@ -8,9 +8,43 @@
     .list_container {
         display: block;
         width: 100%;
-        border: 2px solid black;
+        font-family: '--main-font-kr', '--main-font';
+        font-weight: 200;
+
         .list_container--comment {
-            
+            display:flex;
+            align-items: center;
+            flex-flow: row nowrap;
+            padding: toRem(20);
+            border-bottom: toRem(2) solid rgba(163, 163, 163, 0.3);
+            &:last-child {
+                border-bottom: none;
+            }
+            &:hover {
+                background-color: rgba(163, 163, 163, 0.3);
+                cursor: pointer;
+            }
+            .comment--profile {
+                width: toRem(35);
+                aspect-ratio: 1;
+                margin: 0 toRem(20)
+            }
+            .comment--content {
+                flex-grow: 1;
+                .content--info {
+                    font-size: toRem(15);
+                    .info--username {
+                        margin-right: toRem(100);
+                        font-style: italic;
+                    }
+                    .info--date {
+
+                    }
+                }
+            }
+            .comment--more {
+                width: toRem(30);
+            }
         }
     }
 }
