--- a/src/components/Post/PostRelated/PostCommentList/PostCommentList.module.scss
+++ b/src/components/Post/PostRelated/PostCommentList/PostCommentList.module.scss
@@ -3,7 +3,6 @@
 
 .list {
     width: 100%;
-    height: 100vh;
 
     .list_container {
         display: block;
@@ -34,11 +33,11 @@
                 .content--info {
                     font-size: toRem(15);
                     .info--username {
-                        margin-right: toRem(100);
+                        margin-right: toRem(30);
                         font-style: italic;
                     }
                     .info--date {
-
+                        font-size: toRem(12);
                     }
                 }
             }
