--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -4,6 +4,7 @@
     position: relative;
     width: 100%;
     max-width: toRem($page_content_maxwidth);
-    margin: toRem($headerH) auto 0;
+	padding-top: toRem($headerH);
+    margin: 0 auto 0;
     height: 150vh;
 }
