--- a/src/utils/toremfunc.scss
+++ b/src/utils/toremfunc.scss
@@ -8,5 +8,10 @@
 //     @return $res;
 // };
 
+
+//global variable
 $headerH: 80;
 $page_content_maxwidth: 1200;
+
+//post-create page variable
+$intro-thumbnailH:500;
