--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,6 +12,7 @@
     font-weight: 500;
     z-index: 10;
     background-color: white;
+	box-sizing: border-box;
     
     box-shadow: 1px 1px 3.5px 3.5px #E3E3E3;
 
