--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -5,5 +5,6 @@
     position: relative;
     width: 100%;
     max-width: toRem($page_content_maxwidth);
-    margin: toRem($headerH) auto 0;
+    margin: 0 auto 0;
+	padding-top: toRem($headerH); 
 }
