--- a/src/pages/CreatePage/sub/ThumbnailSet.module.scss
+++ b/src/pages/CreatePage/sub/ThumbnailSet.module.scss
@@ -11,12 +11,14 @@
 	flex-wrap: row nowrap;
 	
 	.thumbnail_optionbar {
+		position: absolute;
 		height: fit-content;
 		width: fit-content;
 		padding: toRem(15);
 		box-sizing: border-box;
-		margin-left: auto;
+		right: 0;
 		background-color: rgba(255,255,255,0.3);
+		align-self: center;
 		
 		.thumbnail_optionbar--imageAdd, .thumbnail_optionbar--imageDelete {
 			width: toRem(35);
