--- a/src/pages/CreatePage/sub/WriteContent.module.scss
+++ b/src/pages/CreatePage/sub/WriteContent.module.scss
@@ -8,6 +8,7 @@
     margin: 0 auto 0;
     padding: toRem(20);
     box-sizing: border-box;
+    border: 2px solid #EBEBEB;
     &:focus-within {
         outline: none;
     }
