--- a/src/pages/CreatePage/sub/WriteContent.module.scss
+++ b/src/pages/CreatePage/sub/WriteContent.module.scss
@@ -50,10 +50,18 @@
             background-size: cover;
             box-sizing: border-box;
             border: none;
+            position: relative;
         }
 
         .image--highlight {
-            border: 2px solid skyblue !important;
+            &::after {
+                content:"";
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                border: 4px solid skyblue;
+                box-sizing: border-box;
+            }
         }
     }
 
