--- a/src/pages/CreatePage/sub/WriteContent.module.scss
+++ b/src/pages/CreatePage/sub/WriteContent.module.scss
@@ -22,6 +22,7 @@
             height: fit-content;
             position: relative;
             padding: 0;
+            margin: toRem(6) 0;
             word-break: break-word;
             font-family: '--main-font-kr', '--main-font';
             &:first-child::before {
@@ -41,19 +42,22 @@
                 display: inline-block;
             }
         }
+        
 
-        .image {
+        .imageContainer {
             width: 100%;
-            aspect-ratio: 1.6;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            height: fit-content;
             box-sizing: border-box;
             border: none;
             position: relative;
+            margin: toRem(15) 0;
+
+            img {
+                width: 100%;
+            }
         }
 
-        .image--highlight {
+        .imageContainer--highlight {
             &::after {
                 content:"";
                 position: absolute;
@@ -61,6 +65,8 @@
                 width: 100%;
                 border: 4px solid skyblue;
                 box-sizing: border-box;
+                top: 0;
+                left: 0;
             }
         }
     }
