--- a/src/pages/CreatePage/sub/WriteContent.module.scss
+++ b/src/pages/CreatePage/sub/WriteContent.module.scss
@@ -7,7 +7,7 @@
     display: flex;
     .write--content {
         width: 70%;
-        height: 150vh;
+        min-height: 150vh;
         position: relative;
         margin: 0 auto 0;
         padding: toRem(20);
@@ -19,7 +19,7 @@
     
         .line{
             line-height: toRem($content--font-Height);
-            height: toRem($content--font-Height);
+            height: fit-content;
             position: relative;
             padding: 0;
             margin: toRem(6) 0;
