--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,6 +22,7 @@
         max-width: toRem($page_content_maxwidth);
         display: flex;
         flex-direction: row;
+        align-items: center;;
         margin: 0 auto;
         > div {
             position: relative;
@@ -74,3 +75,33 @@
     }
 }
 
+@media (max-width: 764px) {
+    .nav {
+        .nav_container {
+            .username {
+                display: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .nav {
+        .nav_container {
+           #icon-notification {
+                display: none;
+           }
+
+           .search {
+                input {
+                    display: none;
+                }
+           }
+
+           .logo {
+                height: 80%;
+           }
+        }
+    }
+}
+ 
