--- a/src/components/Partition/PartitionIndex.module.scss
+++ b/src/components/Partition/PartitionIndex.module.scss
@@ -15,6 +15,7 @@
         border-radius: 50%;
         border: 2px solid skyblue;
         box-sizing: border-box;
+        margin: 0 toRem(8);
         &:checked {
             background-color: skyblue; 
         }
