--- a/src/pages/PostPage/Post/PostRelated/PostCommentBar/PostCommentBarUpper.module.scss
+++ b/src/pages/PostPage/Post/PostRelated/PostCommentBar/PostCommentBarUpper.module.scss
@@ -24,3 +24,11 @@
         }
 
     }
+
+    @media (max-width: 450px) {
+        .bar_upper {
+            .like, .share, .exclamation, .hideshowtoggle {
+                flex-basis: toRem(30);
+            }
+        }
+    }
