--- a/src/pages/CreatePage/sub/ThumbnailTitle.module.scss
+++ b/src/pages/CreatePage/sub/ThumbnailTitle.module.scss
@@ -15,6 +15,9 @@
 	.title--main {
 		font-weight: 400;
 		font-size: toRem(40);
+		@media(max-width: 450px) {
+			font-size: toRem(30);
+		}
 		margin: initial;
 		
 		&::before {
@@ -25,6 +28,9 @@
 	.title--sub {
 		font-weight: 200;
 		font-size: toRem(25);
+		@media(max-width: 450px) {
+			font-size: toRem(15);
+		}
 		margin: initial;
 		margin-top: toRem(20);
 		&::before {
