--- a/src/pages/PostPage/Post/PostRelated/PostCommentBar/PostCommentBar.module.scss
+++ b/src/pages/PostPage/Post/PostRelated/PostCommentBar/PostCommentBar.module.scss
@@ -8,7 +8,11 @@
     max-width: toRem($page_content_maxwidth);
     box-sizing: border-box;
     background-color: rgba(255,255,255,0.9);
-    padding: toRem(10) toRem(30) toRem(10);
+    padding: toRem(10) toRem(30) toRem(10);   
+}
 
-    
+@media(max-width: 768px) {
+    .bar {
+        padding: toRem(5) toRem(20) toRem(5);
+    }
 }
