:sparkle: added sidebar

--- a/src/components/Loading/Loading.module.scss
+++ b/src/components/Loading/Loading.module.scss
@@ -1,5 +1,5 @@
-@import '../../../utils/toremfunc.scss';
-@import '../../../utils/style_initialize.css';
+@import '../../utils/toremfunc.scss';
+@import '../../fonts/Font-Face.module.scss';
 
 .loading {
     position: relative;
