--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -42,6 +42,8 @@
         
         .search {
             cursor: pointer;
+            position: relative;
+            margin-left: auto;
             input {
                 height: 40%;
                 width: toRem(200);
@@ -63,7 +65,6 @@
         }
     
         .title {
-            flex-grow: 1;
             h3 {cursor: pointer;}
         }
     
