--- a/src/pages/CreatePage/sub/TextEditPalette.module.scss
+++ b/src/pages/CreatePage/sub/TextEditPalette.module.scss
@@ -13,20 +13,29 @@
     background: rgba(192, 235, 255, 1);
     box-sizing: border-box;
 
-    .colorPalette {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: toRem(10);
+    .colors, .bold {
+        width: toRem(35);
+    }
 
-        .colors {
-            width: toRem(17);
+    .colorPalette {
+        position: absolute;
+        display: flex;
+        flex-flow: row wrap;    
+        justify-content: flex-start;
+        align-items: center;
+        width: toRem(400);
+
+        .color_button {
+            position: relative;
+            width: toRem(20);
+            margin: 0 toRem(4);
             border-radius: 50%;
             overflow: hidden;
 
             .color {
-                width: 100%;
-                height: 100%;
+                width: 100%; height: 100%;
             }
         }
+
     }
 }
