--- a/src/pages/CreatePage/sub/TextEditPalette.module.scss
+++ b/src/pages/CreatePage/sub/TextEditPalette.module.scss
@@ -2,6 +2,17 @@
 @import '../../../fonts/Font-Face.module.scss';
 
 
+@keyframes colorButtonAppear {
+    from {
+        opacity: 0;
+        transform: translateY(-40px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
 .container {
     position: absolute;
     display: flex;
@@ -9,9 +20,8 @@
     left: toRem(20);
     right: toRem(20);
     padding: toRem(5);
-    border-bottom: 2px dotted skyblue;
-    background: rgba(192, 235, 255, 1);
     box-sizing: border-box;
+    align-items: center;
 
     .colors, .bold {
         width: toRem(35);
@@ -32,10 +42,26 @@
             border-radius: 50%;
             overflow: hidden;
 
+
             .color {
                 width: 100%; height: 100%;
             }
         }
 
+        .color_button--animation {
+            animation-name: colorButtonAppear;
+            animation-duration: 0.4s;
+            animation-timing-function: ease-in-out;
+            animation-fill-mode: backwards;
+        }
+
+    }
+
+    .fontSizeSelect {
+        width: toRem(70);
+        height: toRem(30);
+        outline: none;
+
     }
 }
+
