:bug: fixed the bug of the picture not being inserted in the middle of the text

--- a/src/pages/CreatePage/sub/TextEditPalette.module.scss
+++ b/src/pages/CreatePage/sub/TextEditPalette.module.scss
@@ -22,6 +22,7 @@
     padding: toRem(5);
     box-sizing: border-box;
     align-items: center;
+    background-color: white;
 
     .colors, .bold {
         width: toRem(35);
