:recycle: extracted serachText method

--- a/src/pages/CreatePage/sub/TextEditPalette.module.scss
+++ b/src/pages/CreatePage/sub/TextEditPalette.module.scss
@@ -34,7 +34,11 @@
         flex-flow: row wrap;    
         justify-content: flex-start;
         align-items: center;
-        width: toRem(400);
+        width: 100%;
+        left: 0;
+        background-color: white;
+        padding: inherit;
+        box-sizing: border-box;
 
         .color_button {
             position: relative;
