:sparkles: added customizing font-size to palette :bug: showing current font size not completed:

--- a/src/pages/CreatePage/sub/TextEditPalette.module.scss
+++ b/src/pages/CreatePage/sub/TextEditPalette.module.scss
@@ -63,10 +63,14 @@
     }
 
     .fontSizeSelect {
-        width: toRem(70);
+        width: fit-content;
         height: toRem(30);
         outline: none;
 
+        .fontSizeOption {
+            width: 100%;
+            height: inherit;
+        }
     }
 }
 
