:bug: fixed showing the default value of the font-size on the textedit palette

--- a/src/pages/CreatePage/sub/WriteContent.module.scss
+++ b/src/pages/CreatePage/sub/WriteContent.module.scss
@@ -19,7 +19,7 @@
         }
     
         .line{
-            line-height: toRem($content--font-Height);
+            line-height: fit-content;;
             height: fit-content;
             min-height: toRem($content--font-Height);
             position: relative;
