:recycle: modified the hierarchy of the create page related elements

--- a/src/pages/CreatePage/sub/Thumbnail/ThumbnailTitle.module.scss
+++ b/src/pages/CreatePage/sub/Thumbnail/ThumbnailTitle.module.scss
@@ -1,5 +1,5 @@
-@import '../../../utils/toremfunc.scss';
-@import '../../../fonts/Font-Face.module.scss';
+@import '../../../../utils/toremfunc.scss';
+@import '../../../../fonts/Font-Face.module.scss';
 
 .title {
 	padding: toRem(10);
