--- a/src/pages/CreatePage/sub/EditableElements/EditableP/TextEditPalette.module.scss
+++ b/src/pages/CreatePage/sub/EditableElements/EditableP/TextEditPalette.module.scss
@@ -1,5 +1,5 @@
-@import '../../../utils/toremfunc.scss';
-@import '../../../fonts/Font-Face.module.scss';
+@import '../../../../../utils/toremfunc.scss';
+@import '../../../../../fonts/Font-Face.module.scss';
 
 
 @keyframes colorButtonAppear {
