--- a/components/Partition/Partition.module.scss
+++ b/components/Partition/Partition.module.scss
@@ -1,5 +1,15 @@
 @use '@/utils/toremfunc.scss';
 
+@keyframes partitionFloat {
+    0% {
+        transform: translateY(10%);
+        opacity: 0;
+    } 100% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
 .partition {
     position: relative;
     width: 100%;
@@ -9,6 +19,7 @@
     justify-content: center;
     box-sizing: border-box;
     margin: toremfunc.toRem(60) 0;
+    animation: partitionFloat 0.3s ease-in-out backwards;
     
     .article_scroll {
         position: absolute;
