:sparkle: added context on reading logged user info

--- a/components/Sidebar/SidebarProfile.module.scss
+++ b/components/Sidebar/SidebarProfile.module.scss
@@ -24,6 +24,7 @@
         .badgeDisplay--caption {
             display: block;
             text-align: center;
+            border: 2px solid black;
         }
     }
 
