--- a/components/Global/ProfilePictureComponent.module.scss
+++ b/components/Global/ProfilePictureComponent.module.scss
@@ -1,7 +1,7 @@
 .profilePicture {
     width: 100%;
     height: 100%;
-    background: url('../../public/logo192.png');
+    background: url('/logo192.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
